[package]
name = "rust_ext"
version = "0.1.0"
authors = ["Hood Chatham <hood@mit.edu>", "Dexter Chua <dexter@math.harvard.edu>"]
edition = "2018"
description = "Compute Ext over the Steenrod algebra"
repository = "https://github.com/hoodmane/rust_ext/"
license = "(MIT OR Apache-2.0)"

[dependencies]
parking_lot = "0.10"
lock_api = "0.3"
lazy_static = "1.2.0"
bivec = { path = "bivec"}
once = { path = "once"}
serde_json = "1.0.0"
serde = { version = "1.0.0", features = ["derive"] }
thread-token = { path = "thread-token", optional = true }
saveload = { path = "saveload" }
enum_dispatch = "0.2.0"
nom = "5.0.0"
query = { path = "query" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.clap]
version = "2.33.0"
default-features = false
features = ["yaml", "wrap_help", "color"]

[dev-dependencies]
rand = "0.7.0"
rstest = "0.5.0"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true
opt-level = 3
debug = true

[workspace]
members = ["ext-websocket", "bivec", "compressor", "once", "thread-token", "saveload"]

[features]
cache-multiplication = []
concurrent = ["thread-token"]
prime-two = []
