[package]
name = "binary"
version = "0.1.0"
authors = ["Hood Chatham <hood@mit.edu>", "Dexter Chua <dexter@math.harvard.edu>"]
edition = "2018"

[dependencies]
error = { path = "../libraries/error" }
ext = { path = "../libraries/" }
bivec = { path = "../libraries/bivec" }
fp = { path = "../libraries/fp" }
query = { path = "../libraries/query" }
saveload = { path = "../libraries/saveload" }
serde_json = "1.0.0"
thread-token = { path = "../libraries/thread-token", optional = true }

[dependencies.clap]
version = "2.33.0"
default-features = false
features = ["yaml", "wrap_help", "color"]

[features]
cache-multiplication = ["ext/cache-multiplication"]
concurrent = ["thread-token", "ext/concurrent"]
prime-two = ["fp/prime-two", "ext/prime-two"]

[workspace]
members = ["ext-websocket", "compressor"]

[profile.dev.package."*"]
opt-level = 3

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true
opt-level = 3
debug = true

