[package]
name = "binary"
version = "0.1.0"
authors = ["Hood Chatham <hood@mit.edu>", "Dexter Chua <dexter@math.harvard.edu>"]
edition = "2018"

[dependencies]
rust_ext = { path = "../" }
bivec = { path = "../bivec"}
fp = { path = "../fp" }
query = { path = "../query" }
saveload = { path = "../saveload" }
serde_json = "1.0.0"
thread-token = { path = "../thread-token", optional = true }

[dependencies.clap]
version = "2.33.0"
default-features = false
features = ["yaml", "wrap_help", "color"]

[features]
cache-multiplication = ["rust_ext/cache-multiplication"]
concurrent = ["thread-token", "rust_ext/concurrent"]
prime-two = ["fp/prime-two", "rust_ext/prime-two"]
