[package]
name = "ext-websocket"
version = "0.1.0"
authors = ["Hood Chatham <hood@mit.edu>", "Dexter Chua <dalcde@yahoo.com.hk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "*"
serde = { version = "*", features = ["derive"] }
rust_ext = { path = "../" }
bivec = { path = "../bivec" }
thread-token = { path = "../thread-token", optional = true }
enum_dispatch = "0.1.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = "*"
ws = "*"
textwrap = { version = "*", features = ["term_size"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "*"
js-sys = "*"

[features]
default = []
cache-multiplication = ["rust_ext/cache-multiplication"]
concurrent = ["thread-token", "rust_ext/concurrent"]

[lib]
crate-type = ["cdylib", "rlib"]
