[package]
name = "ext-websocket"
version = "0.1.0"
authors = ["Hood Chatham <hood@mit.edu>", "Dexter Chua <dalcde@yahoo.com.hk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bivec = { path = "../bivec" }
enum_dispatch = "0.2.0"
fp = { path = "../fp" }
parking_lot = "0.10"
rust_ext = { path = "../" }
serde_json = "1.0.0"
serde = { version = "1.0.0", features = ["derive"] }
thread-token = { path = "../thread-token", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
time = "0.1"
ws = "0.9.0"
textwrap = { version = "0.11.0", features = ["term_size"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.0"
js-sys = "0.3.0"

[features]
default = []
cache-multiplication = ["rust_ext/cache-multiplication"]
concurrent = ["thread-token", "rust_ext/concurrent"]
prime-two = ["fp/prime-two", "rust_ext/prime-two"]

[lib]
crate-type = ["cdylib", "rlib"]
