[package]
name = "ext"
version = "0.1.0"
authors = ["Hood Chatham <hood@mit.edu>", "Dexter Chua <dexter@math.harvard.edu>"]
edition = "2021"
description = "Compute Ext over the Steenrod algebra"
repository = "https://github.com/SpectralSequences/ext/"
license = "(MIT OR Apache-2.0)"
resolver = "2"

[dependencies]
algebra = { path = "crates/algebra", default-features = false, features = ["json"] }
bivec = { path = "crates/bivec"}
fp = { path = "crates/fp", default-features = false }
once = { path = "crates/once"}
query = { path = "crates/query" }
sseq = { path = "crates/sseq", default-features = false }
adler = "1"

anyhow = "1.0.0"
rayon = { version = "1.5", optional = true }
rustc-hash = "1.1.0"
serde_json = "1.0.0"
itertools = { version = "0.10.0", default-features = false, features = ["use_alloc"] }
chart = { path = "crates/chart" }
dashmap = "4.0.0"
byteorder = "1.4.3"

zstd = { version = "0.9.0", optional = true }

[dev-dependencies]
expect-test = "1.1.0"
rstest = "0.11.0"
iai = "0.1.1"
tempfile = "3.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["odd-primes"]
cache-multiplication = []
concurrent = ["rayon", "once/concurrent", "fp/concurrent", "algebra/concurrent"]
odd-primes = ["fp/odd-primes", "algebra/odd-primes", "sseq/odd-primes"]

[workspace]
members = [
    "crates/algebra",
    "crates/bivec",
    "crates/fp",
    "crates/once",
    "crates/chart",
    "crates/sseq",
]

[[bench]]
name = "iai"
harness = false

[[bench]]
name = "resolve"
harness = false

[[bench]]
name = "resolve_concurrent"
harness = false

[[bench]]
name = "secondary"
harness = false

[[bench]]
name = "load_resolution"
harness = false
