[package]
name = "ext"
version = "0.1.0"
authors = [
    "Hood Chatham <hood@mit.edu>",
    "Dexter Chua <dexter@math.harvard.edu>",
    "Joey Beauvais-Feisthauer <joeybf@wayne.edu>",
]
edition = "2021"
description = "Compute Ext over the Steenrod algebra"
repository = "https://github.com/SpectralSequences/ext/"
license = "(MIT OR Apache-2.0)"
resolver = "2"

[dependencies]
algebra = { path = "crates/algebra", default-features = false }
bivec = { path = "crates/bivec" }
chart = { path = "crates/chart" }
fp = { path = "crates/fp", default-features = false }
maybe-rayon = { path = "crates/maybe-rayon" }
once = { path = "crates/once" }
query = { path = "crates/query" }
sseq = { path = "crates/sseq", default-features = false }

adler = "1"
anyhow = "1.0.0"
byteorder = "1.4.3"
dashmap = "4.0.0"
itertools = { version = "0.10.0", default-features = false, features = [
    "use_alloc",
] }
rustc-hash = "1.1.0"
serde_json = { version = "1.0.0", features = ["preserve_order"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

zstd = { version = "0.9.0", optional = true }

[target.'cfg(unix)'.dependencies]
ctrlc = { version = "3", features = ["termination"] }

[dev-dependencies]
expect-test = "1.1.0"
rstest = "0.17.0"
tempfile = "3.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["odd-primes"]
cache-multiplication = ["algebra/cache-multiplication"]
concurrent = [
    "algebra/concurrent",
    "fp/concurrent",
    "maybe-rayon/concurrent",
    "once/concurrent",
    "sseq/concurrent",
]
odd-primes = ["fp/odd-primes", "algebra/odd-primes", "sseq/odd-primes"]
logging = []
nassau = []

[workspace]
members = [
    "crates/algebra",
    "crates/bivec",
    "crates/chart",
    "crates/fp",
    "crates/maybe-rayon",
    "crates/once",
    "crates/query",
    "crates/sseq",
]

[[bench]]
name = "resolve"
harness = false

[[bench]]
name = "resolve_concurrent"
harness = false

[[bench]]
name = "secondary"
harness = false

[[bench]]
name = "load_resolution"
harness = false
