[package]
name = "ext_py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ext_py"
crate-type = ["cdylib"]

[dependencies]
algebra = { path = "../ext/crates/algebra" }
bivec = { path = "../ext/crates/bivec" }
fp = { path = "../ext/crates/fp" }
sseq = { path = "../ext/crates/sseq" }

ext = { path = "../ext", features = ["logging"] }

pyo3 = "0.29.0"
serde_json = "1.0.141"
