[package]
name = "rust_algebra"
version = "0.1.0"
authors = ["Hood Chatham <hood@mit.edu>", "Dexter Chua <dexter@math.harvard.edu>"]
edition = "2018"
description = "Rust Algebra"
repository = "https://github.com/hoodmane/rust_ext/"
license = "(MIT OR Apache-2.0)"

[dependencies]
saveload = { path = "../libraries/saveload" }
bivec = { path = "../libraries/bivec" }
fp = { path = "../libraries/fp" }

algebra_python = { path = "algebra_python" }
fp_python = { path = "fp_python" }
python_utils = { path = "python_utils" }

enum_dispatch = "0.2.0"
lazy_static = "1.2.0"
lock_api = "0.3"
nom = "5.0.0"
parking_lot = "0.10"
serde_json = "1.0.0"
serde = { version = "1.0.0", features = ["derive"] }
rstest = "0.5.0"

[dev-dependencies]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true
opt-level = 3
debug = true

[workspace]
members = ["python_utils", "fp_python", "algebra_python"]

[features]
cache-multiplication = []
prime-two = ["fp/prime-two"]


[dependencies.pyo3]
version = "0.9.0-alpha.1"
features = ["extension-module"]