[package]
name = "ext"
version = "0.1.0"
authors = ["Hood Chatham <hood@mit.edu>", "Dexter Chua <dexter@math.harvard.edu>"]
edition = "2018"
description = "Compute Ext over the Steenrod algebra"
repository = "https://github.com/SpectralSequences/ext/"
license = "(MIT OR Apache-2.0)"

[dependencies]
algebra = { path = "algebra" }
bivec = { path = "bivec"}
enum_dispatch = "0.2.0"
error = { path = "error"}
fp = { path = "fp" }
lazy_static = "1.2.0"
lock_api = "0.3"
nom = "5.0.0"
once = { path = "once"}
parking_lot = "0.10"
query = { path = "query" }
saveload = { path = "saveload" }
serde_json = "1.0.0"
serde = { version = "1.0.0", features = ["derive"] }
thread-token = { path = "thread-token", optional = true }

[target.'cfg(not(target_arch = "wasm32-unknown-unknown"))'.dependencies.clap]
version = "2.33.0"
default-features = false
features = ["yaml", "wrap_help", "color"]

[dev-dependencies]
rstest = "0.5.0"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true
opt-level = 3
debug = true

[workspace]
members = ["algebra", "bivec", "fp",  "once", "saveload", "thread-token", "error"]

[features]
cache-multiplication = []
concurrent = ["thread-token"]
prime-two = ["fp/prime-two"]
