[package]
name = "sseq_ext"
version = "0.1.0"
edition = "2024"
authors = ["Hood Chatham <hood@mit.edu>"]
description = "Python bindings for the ext crate (Ext over the Steenrod algebra)"
license = "MIT OR Apache-2.0"

[lib]
name = "sseq_ext"
# `cdylib` is needed for the python module produced by maturin.
# `rlib` is convenient for `cargo check`/`cargo test` of integration tests.
crate-type = ["cdylib", "rlib"]

[features]
# `test-hooks` exposes internal `_test_*` methods that the safety test suite
# uses to exercise the runtime borrow-check path. It is enabled by default so
# that `maturin develop` + `pytest` works out of the box; build release wheels
# with `--no-default-features --features pyo3/extension-module` to exclude it.
#
# `concurrent` pulls in the rayon-backed threaded code paths of the underlying
# crates. It is on by default for native builds, but must be dropped when
# targeting WebAssembly/Pyodide, which has no threads by default. Build the
# wasm extension with `--no-default-features --features pyo3/extension-module`.
default = ["concurrent", "test-hooks"]
test-hooks = []
concurrent = [
    "ext/concurrent",
    "algebra/concurrent",
    "fp/concurrent",
    "sseq/concurrent",
]

[dependencies]
ext = { path = "../ext", default-features = false, features = ["odd-primes"] }
algebra = { path = "../ext/crates/algebra", default-features = false, features = ["odd-primes"] }
fp = { path = "../ext/crates/fp", default-features = false, features = ["odd-primes"] }
sseq = { path = "../ext/crates/sseq", default-features = false, features = ["odd-primes"] }
bivec = { path = "../ext/crates/bivec" }

anyhow = "1"
serde_json = { version = "1", features = ["preserve_order"] }

pyo3 = { version = "0.28", features = ["extension-module", "anyhow", "abi3-py310"] }
