[package]
name = "ext_webserver"
version = "0.1.0"
authors = ["Hood Chatham <hood@mit.edu>", "Dexter Chua <dalcde@yahoo.com.hk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bivec = { path = "ext/crates/bivec" }
enum_dispatch = "0.2.0"
error = { path = "ext/crates/error" }
fp = { path = "ext/crates/fp", features = ["json"] }
parking_lot = "0.11"
ext = { path = "ext" }
serde_json = "1.0.0"
serde = { version = "1.0.0", features = ["derive"] }
thread-token = { path = "ext/crates/thread-token", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
time = "0.2.7"
ws = "=0.9.1"
textwrap = { version = "0.11.0", features = ["term_size"] }
crossbeam-channel = { version = "0.5.0", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.0"
js-sys = "0.3.0"

[features]
default = ["odd-primes", "concurrent"]
cache-multiplication = ["ext/cache-multiplication"]
odd-primes = ["fp/odd-primes", "ext/odd-primes"]
concurrent = ["thread-token", "ext/concurrent", "crossbeam-channel"]

[lib]
crate-type = ["cdylib", "rlib"]
