[package]
name = "algebra"
version = "0.1.0"
authors = ["Hood Chatham <hood@mit.edu>", "Dexter Chua <dexter@math.harvard.edu>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde_json = "1.0.0"
serde = { version = "1.0.0", features = ["derive"] }
enum_dispatch = "0.2.0"
parking_lot = "0.10"
nom = "5.0.0"
lazy_static = "1.2.0"
lock_api = "0.3"

saveload = { path = "../saveload" }
query = { path = "../query" }
fp = { path = "../fp" }
bivec = { path = "../bivec"}
once = { path = "../once" }

[dev-dependencies]
rand = "0.7.0"
rstest = "0.5.0"
bencher = "0.1.5"

[features]
prime-two = []