[package]
name = "rust_ext"
version = "0.1.0"
authors = ["Hood Chatham <hood@mit.edu>", "Dexter Chua <dexter@math.harvard.edu>"]
edition = "2018"
description = "Python wrappers for rust ext code"
repository = "https://github.com/SpectralSequences/ext/"
license = "(MIT OR Apache-2.0)"

[dependencies]
saveload = { path = "../../ext/crates/saveload", version = "0.1.0"  }
bivec = { path = "../../ext/crates/bivec", version = "0.1.0"  }
fp = { path = "../../ext/crates/fp", version = "0.1.0"  }
ext = { path = "../../ext", version = "0.1.0"  }
algebra = { path = "../../ext/crates/algebra", version = "0.1.0"  }

python_algebra = { path = "python_algebra", version = "0.1.0"  }
python_fp = { path = "python_fp", version = "0.1.0"  }
python_utils = { path = "python_utils", version = "0.1.0"  }

enum_dispatch = "0.2.0"
lazy_static = "1.2.0"
lock_api = "0.3"
nom = "5.0.0"
paste = "0.1"
parking_lot = "0.10"
serde_json = "1.0.0"
serde = { version = "1.0.0", features = ["derive"] }
rstest = "0.5.0"

[dev-dependencies]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
debug = true

[workspace]
members = ["python_utils", "python_fp", "python_algebra"]

[features]
cache-multiplication = []
prime-two = ["fp/prime-two"]


[dependencies.pyo3]
version = "0.9.0-alpha.1"
features = ["extension-module"]
