[package]
name = "sseq_gui"
version = "0.1.0"
authors = ["Hood Chatham <hood@mit.edu>", "Dexter Chua <dalcde@yahoo.com.hk>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algebra = { path = "../../ext/crates/algebra", default-features = false }
bivec = { path = "../../ext/crates/bivec", features = ["json"] }
ext = { path = "../../ext", default-features = false }
fp = { path = "../../ext/crates/fp", features = ["json"], default-features = false }
once = { path = "../../ext/crates/once" }
sseq = { path = "../../ext/crates/sseq", features = ["json"], default-features = false }

anyhow = "1.0.0"
enum_dispatch = "0.3"
rustc-hash = "1.1.0"
serde_json = "1.0.0"
serde = { version = "1.0.0", features = ["derive"] }
itertools = { version = "0.10.0", default-features = false, features = ["use_alloc"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
time = "0.3.0"
ws = "=0.9.1"
textwrap = { version = "0.11.0", features = ["term_size"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Match wasm-bindgen version with wasm-bindgen-cli
wasm-bindgen = "=0.2.78"
js-sys = "0.3.0"

[dev-dependencies]
query = { path = "../../ext/crates/query" }

[features]
default = ["odd-primes"]
cache-multiplication = ["ext/cache-multiplication"]
odd-primes = ["ext/odd-primes"]
concurrent = ["ext/concurrent"]

[lib]
crate-type = ["cdylib", "rlib"]
