[package]
name = "sseq-display-backend"
version = "0.1.0"
authors = ["Hood Chatham"]
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-mutable-globals"]

[lib]
crate-type = ["cdylib"]

[dependencies]
arrayvec = "0.5.1"
js-sys = "0.3.45"
wasm-bindgen = "0.2.68"
# wasm-bindgen-futures = "0.4.17" # Would need this for async (like fetch)
lazy_static = "1.4.0"
uuid = { version = "0.8.1", features = ["wasm-bindgen", "v4"] }
derive_more = "0.99.11"
euclid = "0.22.1"
lyon = "0.16.2"
footile = "0.6.0"
fonterator = {version = "0.9.0"}
pix = "0.13.1"
console_error_panic_hook = "0.1.6"


[dependencies.web-sys]
version = "0.3.45"
features = [
  'Window',
  'Document',
  'Element',
  'HtmlElement',
  'HtmlCanvasElement', 
  'CssStyleDeclaration',
  # 'Response', # needed for fetch

# WebGL features:
  'WebGlActiveInfo',
  'WebGlBuffer',
  'WebGlFramebuffer',
  'WebGlProgram',
  'WebGlRenderbuffer',
  'WebGl2RenderingContext',
  'WebGlShader',
  'WebGlTexture',   
  'WebGlUniformLocation',
  'WebGlVertexArrayObject',
]
