[package]
name = "algebra"
version = "0.1.0"
authors = [
    "Hood Chatham <hood@mit.edu>",
    "Dexter Chua <dexter@math.harvard.edu>",
]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bivec = { path = "../bivec" }
fp = { path = "../fp", default-features = false }
maybe-rayon = { path = "../maybe-rayon" }
once = { path = "../once" }

anyhow = "1.0.98"
auto_impl = "1.3.0"
hashbrown = "0.15.4"
itertools = { version = "0.14.0", default-features = false, features = [
    "use_alloc",
] }
nom = { version = "8.0.0", default-features = false, features = ["alloc"] }
rustc-hash = "2.1.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"

[dev-dependencies]
bencher = "0.1.5"
expect-test = "1.5.1"
rstest = "0.25.0"

[features]
default = ["odd-primes"]
cache-multiplication = []
concurrent = ["fp/concurrent", "maybe-rayon/concurrent"]
odd-primes = ["fp/odd-primes"]

[[bench]]
name = "milnor"
harness = false
