[package]
name = "fp"
version = "0.1.0"
authors = ["Dexter Chua <dexter@math.harvard.edu>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
build_const = "0.2.2"
byteorder = "1.5.0"
cfg-if = "1.0.1"
dashmap = "5"
itertools = { version = "0.13.0" }
paste = "1.0.15"
proptest = { version = "1.7", optional = true }
serde = "1.0.219"
serde_json = "1.0.141"

maybe-rayon = { path = "../maybe-rayon" }
query = { path = "../query" }

[dev-dependencies]
# We use the proptest harness for our own tests
fp = { path = ".", default-features = false, features = ["proptest"] }
criterion = { version = "0.5", features = ["html_reports"] }
expect-test = "1.5.1"
pprof = { version = "0.13.0", features = ["criterion", "flamegraph"] }
proptest = "1.7"
rand = "0.8.5"
rstest = "0.17.0"

[build-dependencies]
build_const = "0.2.2"

[features]
default = ["odd-primes"]
concurrent = ["maybe-rayon/concurrent"]
odd-primes = []

[[bench]]
name = "reduce"
harness = false

[[bench]]
name = "smallfq"
harness = false
